# 100-Days-of-Code

./: .gitignore  README.md  pyproject.toml
Day 15/: main.py
Day 16/: main.py
Day 16 - Coffee Machine/oop-coffee-machine-start/: main.py
Day 17/: main.py
Day 17 - Quiz/: main.py  quiz_brain.py
Day 18/: hurst.py
Day 19/: etch_a_sketch.py  learning.py  turtle_race.py
Day 20/: food.py  main.py  scoreboard.py  snake.py
Day 22/: ball.py  main.py  paddle.py  scoreboard.py
Day 23/: car_manager.py  main.py  player.py  scoreboard.py
Day 24/: main.py  my_file.txt
Day 25/: main.py  main_states_game.py  states_to_learn.csv
Day 26/: main.py
Day 27/: converter.py  main.py  playground.py
Day 28/pomodoro-start/: main.py
Day 29/password-manager-start/: main.py  passwords.txt
Day 30/: main.py
Day 30/NATO+Phonetic+Alphabet+for+the+Code+Exercise/: main.py
Day 30/Password+Manager+(End+of+Day+29)/: data.json  main.py
Day 31/flash-card-project-start/: main.py
Day 32/birthday-wisher-extrahard-start/: birthdays.csv  main.py
Day 33/: main.py
Day 33/issoverhead-start/: main.py
Day 33/kanye-quotes-start/: main.py
Day 34/quizzler-app-start/: data.py  quiz_brain.py  ui.py
Day 35/: .env  main.py
Day 36/stock-news-normal-start/: main.py
Day 37/: .env  main.py
Day 38/: main.py
Day 40/Day+40+Flight+Search+Amadeus+Start/: data_manager.py  flight_data.py  main.py  notification_manager.py
Day 44/6.4 Motivation Meme Project/: index.html
Day 46/: .cache  main.py
Day 47/: main.py
Day 48/: cookie_clicker.py  interaction.py  main.py
Day 49/: main.py
Day 50/: main.py
Day 51/: main.py
Day 52/: main.py
Day 53/: main.py
Day 55/: higher-lower.py  main.py
Day 56/templates/: index.html
Day 57/day-57-start/: main.py
Day 57/day-57-starting-files-blog-templating/: main.py
Day 58/11.0 Bootstrap Intro/: index.html
Day 58/11.2 Bootstrap Components/: index.html
Day 58/11.3 TinDog Project/: index.html  solution.html
Day 59/: main.py
Day 59/templates/: about.html  contact.html  footer.html  header.html  index.html  post.html
Day 60/HTML Forms/: main.py
Day 60/day-60-starting-files-blog-with-contact-form/: main.py
Day 61/day-61-starting-files-flask-secrets/: main.py
Day 62/day-62-starting-files-coffee-and-wifi/: main.py
Day 63/day-63-starting-files-library-project/: main.py
Day 64/day-64-starting-files-top-movies/: main.py
Day 66/day-66-starting-files-cafe-api/: main.py  main_CHATGPT.py
Day 67/day-67-starting-files-upgraded-blog/: main.py
Day 68/day-68-starting-files-flask-auth/: main.py
Day 69/day-69-starting-files-blog-with-users/: forms.py  (+1 more)
Day 72/: Day72.ipynb
Day 73/: Programming_Languages_(start).ipynb
Day 76/: Google Play Store App Analytics (start).ipynb
Day 77/: Computation_with_NumPy_and_N_Dimensional_Arrays_(start).ipynb
Day 78/: Seaborn_and_Linear_Regression_(start).ipynb
Day 79/: Nobel_Prize_Analysis_(start).ipynb
Day 80/: Dr_Semmelweis_Handwashing_Discovery_(start).ipynb
Day 81/: Multivariable_Regression_and_Valuation_Model_(start).ipynb
(+40 files in other folders)
