[project]
name = "100-days-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.2.0",
    "blinker==1.8.2",
    "bootstrap-flask==2.4.1",
    "bs4>=0.0.2",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "colorgram-py>=1.2.0",
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "flask==2.3.3",
    "flask-ckeditor==1.0.0",
    "flask-gravatar==0.5.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.1.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "markupsafe==3.0.2",
    "pandas>=2.2.3",
    "prettytable>=3.15.1",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "requests==2.32.3",
    "selenium>=4.30.0",
    "spotipy>=2.25.1",
    "sqlalchemy==2.0.36",
    "twilio>=9.5.1",
    "typing-extensions==4.12.2",
    "undetected-chromedriver>=3.5.5",
    "urllib3==2.3.0",
    "werkzeug==3.1.1",
    "wtforms==3.2.1",
]
